fix spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3400,6 +3400,11 @@
 	#banner li {
 		letter-spacing: 0.225em;
 		text-transform: uppercase;
+		list-style:none;
+	}
+
+	#banner ul {
+		margin-bottom: 0;
 	}
 
 		#banner h2 {
@@ -3414,7 +3419,7 @@
 			display: inline-block;
 			font-size: 1.75em;
 			opacity: 1;
-			padding: 0.35em 1em;
+			padding: 0.35em 0.35em;
 			position: relative;
 			z-index: 1;
 		}
